--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="w-full h-screen flex flex-col justify-center items-center">
     <div>
         <span class="text-3xl">
-            Hello, <span class="font-bold">{{user.email}}</span>
+            Hello
         </span>
     </div>
 
-    <div class=" w-96 h-96 bg-black text-white">
-        {{user | json}}
+    <div class=" w-96 h-96 overflow-scroll bg-black text-white">
+        {{user}}
     </div>
 
     <div class="mt-3">
