--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
             </div>
             <!-- icon et titre-->
 
-            <!--formulaire d'inscription-->
+            <!--formulaire de connexion-->
             <form class="mt-8 space-y-6" [formGroup]='loginGroup'  (ngSubmit)="onSubmit()" >
                 <div class="rounded-md shadow-sm -space-y-px">
                     <!-- email -->
@@ -58,7 +58,9 @@
                     <!-- password -->
 
                 </div>
-
+                <div class="w-96 flex justify-center">
+                    <a class="text-indigo-500" routerLink="/">S'inscrire</a>
+                </div>
                 <div>
                     <button mat-flat-button [disabled]='loginGroup.invalid' type="submit"
                         class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
@@ -80,7 +82,7 @@
                     </button>
                 </div>
             </form>
-            <!--formulaire d'inscription-->
+            <!--formulaire de connexion-->
         </div>
     </div>
 </div>
